# parley

./: .clippy.toml  .gitattributes  .gitignore  .rustfmt.toml  .typos.toml  AUTHORS  AUTHORS.txt  CHANGELOG.md  CONTRIBUTORS.txt  Cargo.toml  LICENSE-MIT  README.md
attributed_text/: Cargo.toml  README.md
attributed_text/src/: attribute_segments.rs  attributed_text.rs  error.rs  lib.rs  text_range.rs  text_storage.rs
doc/: design.md  (+1 more)
examples/chrome_compare/: Cargo.toml
examples/chrome_compare/src/: main.rs
examples/swash_render/: Cargo.toml
examples/swash_render/src/: main.rs
examples/tiny_skia_render/: Cargo.toml  main.rs
examples/tiny_skia_render/src/: main.rs
examples/tiny_skia_render_styled_text/: Cargo.toml
examples/tiny_skia_render_styled_text/src/: main.rs
examples/vello_cpu_render/: Cargo.toml
examples/vello_cpu_render/src/: main.rs
examples/vello_cpu_render_styled_text/: Cargo.toml
examples/vello_cpu_render_styled_text/src/: main.rs
examples/vello_editor/: Cargo.toml
examples/vello_editor/src/: access_ids.rs  main.rs  text.rs
examples/vello_hybrid_render/: Cargo.toml
examples/vello_hybrid_render/src/: main.rs
fontique/: Cargo.toml  README.md
fontique/examples/: generic_families.rs
fontique/src/: attributes.rs  charmap.rs  fallback.rs  family.rs  family_name.rs  font.rs  generic.rs  impl_fontconfig.rs  lib.rs  matching.rs  scan.rs  script.rs  source.rs  source_cache.rs  unicode_range.rs
fontique/src/backend/: android.rs  coretext.rs  dwrite.rs  fontconfig.rs  mod.rs  script_samples.rs
fontique/src/collection/: mod.rs  query.rs
parley/: Cargo.toml  README.md  build.rs
parley/data/composite/: mod.rs
parley/data/icu4x_data/: mod.rs
parley/src/: analysis.rs  bidi.rs  break_overrides.rs  builder.rs  context.rs  convert.rs  cursor_test.rs  font.rs  icu_convert.rs  icu_working.rs  inline_box.rs  lib.rs  lru_cache.rs  setting.rs  shape.rs  swash_convert.rs  util.rs
parley/src/algos/: bidi.rs  mod.rs  shape.rs  swash_convert.rs
parley/src/analysis/: cluster.rs  data.rs  mod.rs  provider.rs
parley/src/editing/: cursor.rs  editor.rs  mod.rs  selection.rs  split_string.rs
parley/src/editor/: backspace.rs  edit.rs  layout.rs  masonry_types.rs  mod.rs  movement.rs  selection.rs  store.rs
parley/src/emoji/: dfa.rs  mod.rs  types.rs
parley/src/inputs/: break_lines.rs  builder.rs  context.rs  font.rs  line_metrics.rs  mod.rs
parley/src/layout/: accessibility.rs  alignment.rs  cluster.rs  cursor.rs  cursor2.rs  cursor3.rs  data.rs  editor.rs  glyph.rs  layout.rs  line.rs  line_break.rs  mod.rs  replace_swash.rs  run.rs  select.rs  select2.rs  selection.rs
parley/src/outputs/: accessibility.rs  alignment.rs  cluster.rs  cursor.rs  data.rs  editor.rs  layout.rs  line.rs  mod.rs  run.rs
parley/src/resolve/: mod.rs  range.rs  tree.rs
parley/src/shape/: cache.rs  data.rs  mod.rs  push_run.rs
parley/src/style/: brush.rs  font.rs  mod.rs  styleset.rs
parley/src/testing/: mod.rs
parley/src/tests/: mod.rs  test_analysis.rs  test_basic.rs  test_builders.rs  test_cursor.rs  test_editor.rs  test_emoji_segmenters.rs  test_issues.rs  test_lines.rs  test_wrap.rs
parley/tests/: README.md  lines.html  make_report.sh
parley_bench/: Cargo.toml  README.md  build.rs
parley_bench/benches/: main.rs
parley_bench/samples/: README.md  japanese.txt
parley_bench/src/: benches.rs  default_style.rs  draw.rs  fontique_benches.rs  lib.rs
parley_core/: Cargo.toml  README.md
parley_core/src/: analysis.rs  analyzer.rs  bidi.rs  break_overrides.rs  builder.rs  common.rs  context.rs  convert.rs  itemize.rs  lib.rs  lru_cache.rs  resolve.rs  shaped_text.rs  util.rs
parley_core/src/analysis/: cluster.rs  mod.rs
parley_core/tests/: analysis.rs  bidi_conformance.rs
parley_data/: Cargo.toml  README.md
parley_data/src/: emoji.rs  lib.rs
parley_data_gen/: Cargo.toml  README.md
parley_data_gen/src/: lib.rs  main.rs
parley_dev/: Cargo.toml  README.md
parley_dev/src/: lib.rs
parley_draw/: Cargo.toml  README.md
parley_draw/src/: colr.rs  glyph.rs  lib.rs  math.rs
parley_flow/: Cargo.toml  README.md
parley_flow/examples/: basic.rs
parley_flow/src/: block.rs  design.rs  flow.rs  lib.rs  multi_selection.rs  navigation.rs
parley_tests/: Cargo.toml  README.md
parley_tests/linebreaking_browser/: Cargo.toml  index.html
parley_tests/linebreaking_browser_harness/: Cargo.toml
parley_tests/linebreaking_browser_recorder/: Cargo.toml  index.html
parley_tests/linebreaking_cases/: Cargo.toml
parley_tests/parley_linebreaking_cases/: Cargo.toml
parley_tests/tests/: basic.rs  chrome_linebreaking.rs  core_shaping.rs  cursor.rs  draw.rs  editor.rs  exclusions.rs  floats.rs  issues.rs  line_break.rs  linebreaking_matches_chrome.rs  lines.rs  mod.rs  out_of_flow_boxes.rs  segmenter.rs  split_string.rs  text_indent.rs  vertical_align.rs  wrap.rs
styled_text/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
styled_text/src/: attributes.rs  block.rs  document.rs  font_family.rs  font_settings.rs  font_stack.rs  generic.rs  generic_family.rs  lib.rs  runs.rs  segments.rs  setting.rs  style_property.rs  style_set.rs  tests.rs  text.rs  text_builder.rs  text_style.rs  traits.rs
styled_text_parley/: CHANGELOG.md  Cargo.toml  README.md
styled_text_parley/src/: convert.rs  lib.rs  tests.rs
text_primitives/: Cargo.toml  README.md
text_primitives/src/: bidi.rs  font.rs  font_family.rs  generic_family.rs  impl_bytemuck.rs  language.rs  lib.rs  script.rs  tag.rs  text.rs
text_style_resolve/: Cargo.toml  README.md
text_style_resolve/src/: computed.rs  context.rs  error.rs  lib.rs  parse.rs  resolve.rs  tests.rs
unicode_data/: Cargo.toml  README.md
unicode_data/src/: build.rs  lib.rs
unicode_data_gen/: Cargo.toml  README.md
unicode_data_gen/src/: lib.rs  main.rs
unicode_props/: Cargo.toml
unicode_props/src/: lib.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
xtask_image_diff_report/: Cargo.toml  README.md
xtask_image_diff_report/src/: main.rs
xtask_test/: Cargo.toml  README.md
xtask_test/src/: main.rs
(+216 files in other folders)
