[workspace]
resolver = "2"
members = [
    "attributed_text",
    "fontique",
    "parley",
    "parley_bench",
    "parley_core",
    "parley_data",
    "parley_data_gen",
    "parley_dev",
    "parley_draw",
    "text_primitives",
    "examples/swash_render",
    "examples/tiny_skia_render",
    "examples/vello_cpu_render",
    "examples/vello_editor",
    "xtask",
]

[workspace.package]
edition = "2021"
# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml, with the relevant README.md files
# and with the MSRV in the `Unreleased` section of CHANGELOG.md.
rust-version = "1.88"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/parley"

[workspace.dependencies]
accesskit = "0.22.0"
bytemuck = { version = "1.24.0", default-features = false }
databake = { version = "0.2", default-features = false }
fontique = { version = "0.7.0", default-features = false, path = "fontique" }
harfrust = { version = "0.3.2", default-features = false }
hashbrown = { version = "0.16.1", default-features = false, features = [
    "default-hasher",
    "raw-entry",
] }
icu_codepointtrie_builder = { version = "0.5.1", default-features = false, features = ["wasm"] }
icu_collections = { version = "2.1.1", default-features = false }
icu_locale = { version = "2.1.1", default-features = false }
icu_locale_core = { version = "2.1.1", default-features = false }
icu_normalizer = { version = "~2.1.1", default-features = false }
icu_properties = { version = "~2.1.2", default-features = false }
icu_provider = { version = "2.1.1", default-features = false }
icu_provider_adapters = { version = "2.1.1", default-features = false }
icu_provider_export = { version = "2.1.1", default-features = false }
icu_provider_source = { version = "2.1.1", default-features = false }
icu_segmenter = { version = "~2.1.1", default-features = false }
linebender_resource_handle = { version = "0.1.1", default-features = false }
parley = { version = "0.7.0", default-features = false, path = "parley" }
parley_data = { path = "parley_data", default-features = false }
parley_data_gen = { path = "parley_data_gen" }
parley_dev = { default-features = false, path = "parley_dev" }
parley_draw = { default-features = false, path = "parley_draw" }
peniko = { version = "0.4.1", default-features = false }
read-fonts = { version = "0.35.0", default-features = false }
skrifa = { version = "0.37.0", default-features = false }
smallvec = "1.15.1"
swash = { version = "0.2.6", default-features = false }
vello_common = { git = "https://github.com/linebender/vello.git", rev = "ab948fed9d6a0a79bb0eb7c72043a65b7b7a391f", default-features = false }
vello_cpu = { git = "https://github.com/linebender/vello.git", rev = "ab948fed9d6a0a79bb0eb7c72043a65b7b7a391f", default-features = false }
zerovec = { version = "0.11.5", default-features = false }

[workspace.lints]
rust.unsafe_code = "deny"

# LINEBENDER LINT SET - Cargo.toml - v7
# See https://linebender.org/wiki/canonical-lints/
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.trivial_numeric_casts = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"
rust.unused_qualifications = "warn"

clippy.too_many_arguments = "allow"

clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.collection_is_never_read = "warn"
clippy.default_trait_access = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET
