[package]
name = "attributed_text"
version = "0.1.0"
description = "A library for working with attributed text"
keywords = ["text", "rich text", "attributed text"]
categories = ["graphics", "text"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

publish = false

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = []

[dependencies]

[lints]
workspace = true
