[package]
name = "fontique"
version = "0.2.0" # Keep in sync with workspace dependency specification
description = "Font enumeration and fallback."
keywords = ["font", "text"]
categories = ["gui", "os"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["system"]
std = ["read-fonts/std", "peniko/std", "dep:memmap2"]
libm = ["read-fonts/libm", "peniko/libm", "dep:core_maths"]
icu_properties = ["dep:icu_properties"]
unicode_script = ["dep:unicode-script"]
# Enables support for system font backends
system = [
	"std",
	"dep:windows", "dep:windows-core",
	"dep:core-text", "dep:core-foundation", "dep:objc2", "dep:objc2-foundation",
	"dep:fontconfig-cache-parser", "dep:roxmltree",
]

[dependencies]
bytemuck = { workspace = true }
read-fonts = { workspace = true }
peniko = { workspace = true }
smallvec = "1.13.2"
memmap2 = { version = "0.9.5", optional = true }
unicode-script = { version = "0.5.7", optional = true }
core_maths = { version = "0.1.1", optional = true }
icu_properties = { version = "1.5.1", optional = true }
icu_locid = "1.5.0"
hashbrown = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["implement", "Win32_Graphics_DirectWrite"], optional = true }
windows-core = { version = "0.58", optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
core-text = { version = "20.1.0", optional = true }
core-foundation = { version = "0.9.4", optional = true }
objc2 = { version = "0.5.2", optional = true }
objc2-foundation = { version = "0.2.2", features = ["NSArray", "NSEnumerator", "NSPathUtilities", "NSString"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
fontconfig-cache-parser = { version = "0.2.0", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
roxmltree = { version = "0.19.0", optional = true }
