[package]
name = "fontique"
version = "0.5.0" # Keep in sync with workspace dependency specification
description = "Font enumeration and fallback."
keywords = ["font", "text"]
categories = ["gui", "os"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["system"]
std = ["read-fonts/std", "linebender_resource_handle/std", "dep:memmap2"]
libm = ["read-fonts/libm", "dep:core_maths"]
charmap_index = ["read-fonts/cmap"]
icu_properties = ["dep:icu_properties"]
unicode_script = ["dep:unicode-script"]
# Enables support for system font backends
system = [
    "std",
    "dep:windows",
    "dep:windows-core",
    "dep:objc2",
    "dep:objc2-core-foundation",
    "dep:objc2-core-text",
    "dep:objc2-foundation",
    "dep:yeslogic-fontconfig-sys",
    "dep:roxmltree",
]

[dependencies]
bytemuck = { workspace = true }
read-fonts = { workspace = true, features = ["head", "os2", "post", "name", "fvar"] }
linebender_resource_handle = { workspace = true }
smallvec = "1.15.0"
memmap2 = { version = "0.9.5", optional = true }
unicode-script = { version = "0.5.7", optional = true }
core_maths = { version = "0.1.1", optional = true }
icu_properties = { version = "2.0.0", optional = true }
icu_locale_core = { version = "2.0.0", default-features = false, features = ["alloc"] }
hashbrown = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "implement",
    "Win32_Graphics_DirectWrite",
], optional = true }
windows-core = { version = "0.58.0", optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
# FIX: Enable relax-sign-encoding to prevent the bug described in this issue: https://github.com/madsmtm/objc2/issues/566
objc2 = { version = "0.6.1", optional = true, features = ["std", "relax-sign-encoding"] }
# NOTE: When updating objc2-foundation, objc2-core-foundation, or objc2-core-text make sure to use the version of objc2
# that they reference to prevent crate duplication.
objc2-foundation = { version = "0.3.1", optional = true, default-features = false, features = [
    "alloc",
    "NSArray",
    "NSEnumerator",
    "NSPathUtilities",
    "NSString",
] }
objc2-core-foundation = { version = "0.3.1", optional = true, default-features = false, features = [
    "CFBase",
] }
objc2-core-text = { version = "0.3.1", optional = true, default-features = false, features = [
    "CTFont",
    "CTFontDescriptor",
] }

[target.'cfg(target_os = "linux")'.dependencies]
yeslogic-fontconfig-sys = { version = "6.0.0", optional = true, features = ["dlopen"] }

[target.'cfg(target_os = "android")'.dependencies]
roxmltree = { version = "0.20.0", optional = true }
