[package]
name = "parley"
version.workspace = true
description = "Parley provides an API for implementing rich text layout."
keywords = ["text", "layout"]
categories = ["gui", "graphics"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude = ["/tests"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["system"]
std = ["fontique/std", "harfrust/std", "peniko/std", "skrifa/std", "parley_core/std"]
libm = ["fontique/libm", "peniko/libm", "skrifa/libm", "dep:core_maths", "parley_core/libm"]
# Enables support for system font backends
system = ["std", "fontique/system"]
accesskit = ["dep:accesskit", "dep:skrifa", "dep:hashbrown"]

[dependencies]
skrifa = { workspace = true, optional = true }
linebender_resource_handle = { workspace = true }
fontique = { workspace = true }
parley_core = { workspace = true }
core_maths = { version = "0.1.1", optional = true }
accesskit = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true }
harfrust = { workspace = true }

[dev-dependencies]
parlance = { workspace = true }
parley_dev = { workspace = true }
peniko = { workspace = true }
tiny-skia = "0.11.4"

# We special-case android targets because oxipng doesn't build in Android CI.
[target.'cfg(not(target_os = "android"))'.dev-dependencies]
oxipng = { version = "9.1.5", default-features = false, features = ["freestanding"] }
