[package]
name = "parley_bench"
description = "Benchmarking harness for parley."
keywords = ["text", "layout"]
categories = ["gui", "graphics"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
parley = { workspace = true, default-features = true }
parley_dev = { workspace = true }
glifo = { workspace = true, default-features = false, features = ["std", "vello_cpu", "png"] }
skrifa = { workspace = true }
tango-bench = { git = "https://github.com/bazhenov/tango", rev = "1d69f0728b707597409be0cc199e7a0173a666dd" }
vello_cpu = { workspace = true, default-features = false, features = ["std", "png", "text"] }


[[bench]]
name = "main"
harness = false

[lints]
workspace = true
