[package]
name = "parley_core"
version = "0.11.0"
description = "Parley Core provides low level APIs for implementing text layout."
keywords = ["text", "layout"]
categories = ["gui", "graphics"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []
# Enables dictionary-based line and word breaking for complex scripts (CJK, Thai, Khmer, Lao, Myanmar).
# When disabled, a lightweight segmenter is used that falls back to character-level breaks for those scripts.
complex-scripts = []

[dependencies]
parlance = { workspace = true }
parley_data = { workspace = true, features = ["baked"] }

icu_normalizer = { workspace = true, features = ["compiled_data"] }
icu_properties = { workspace = true, features = ["compiled_data"] }
icu_segmenter = { workspace = true, features = ["compiled_data"] }

[lints]
workspace = true
