[package]
name = "parley_data"
keywords = ["text", "layout"]
categories = ["gui", "graphics"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["baked"]
baked = ["dep:icu_collections", "dep:zerovec"]
packtab = []

[dependencies]
icu_properties = { workspace = true }
icu_collections = { workspace = true, optional = true }
zerovec = { workspace = true, optional = true }

[dev-dependencies]
icu_properties = { workspace = true, features = ["compiled_data"] }

[lints]
workspace = true
