[package]
name = "parley_data_gen"
keywords = ["text", "layout"]
categories = ["gui", "graphics"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
databake = { workspace = true }
icu_codepointtrie_builder = { workspace = true, features = ["wasm"] }
icu_collections = { workspace = true, features = ["databake"] }
icu_properties = { workspace = true, features = ["compiled_data"] }
parley_data = { workspace = true }

[lints]
workspace = true
