[package]
name = "parley_data_gen"
keywords = ["text", "layout"]
categories = ["gui", "graphics"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
icu_locale = { workspace = true }
icu_properties = { workspace = true, features = ["compiled_data"] }
icu_collections = { workspace = true, features = ["databake"] }
icu_provider_source = { workspace = true, features = ["networking", "use_wasm"] }
parley_data = { workspace = true, default-features = false, features = ["datagen"] }
icu_normalizer = { workspace = true, features = ["compiled_data"] }
icu_segmenter = { workspace = true }
icu_provider_export = { workspace = true, features = ["baked_exporter"] }
databake = { workspace = true, features = ["derive"] }
icu_codepointtrie_builder = { workspace = true, features = ["wasm"] }

[lints]
workspace = true
