[package]
name = "parley_draw"
version = "0.0.0"
description = "Parley Draw provides APIs for efficiently rendering text."
keywords = ["text", "layout"]
categories = ["gui", "graphics"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

publish = false

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "vello_cpu"]
std = ["vello_common/std", "vello_cpu/std"]
png = ["vello_common/png", "vello_cpu/png"]
vello_cpu = ["dep:vello_cpu"]

[lints]
workspace = true

[dependencies]
bytemuck = { workspace = true }
hashbrown = { workspace = true }
skrifa = { workspace = true }
smallvec = { workspace = true }
vello_common = { workspace = true }
vello_cpu = { workspace = true, optional = true }