[package]
name = "parley_tests"
description = "Integration tests for Parley."
categories = ["gui", "graphics"]
keywords = ["text", "layout"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
autotests = false

[[test]]
name = "tests"
path = "tests/mod.rs"

[features]
system = ["parley/system"]

[dependencies]
parley = { workspace = true, features = ["std"] }
parley_core = { workspace = true, features = ["std"] }
parlance = { workspace = true, features = ["std"] }
parley_dev = { workspace = true }
glifo = { workspace = true, features = ["std", "vello_cpu", "png"] }
peniko = { workspace = true, features = ["std"] }
# The `text` feature provides vello_cpu's own glyph-run API, which the parley_core
# renderer uses to rasterize a `ShapedText` directly (parley layouts go via glifo).
vello_cpu = { workspace = true, features = ["std", "png", "text"] }
fontique = { workspace = true, features = ["std"] }
taffy = { version = "0.10", default-features = false, features = ["std", "float_layout"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
oxipng = { version = "9.1.5", default-features = false, features = ["freestanding"] }

[lints]
workspace = true
