[package]
name = "styled_text"
version = "0.1.0"
description = "Compact styled text spans built on attributed_text"
keywords = ["text", "rich text", "style"]
categories = ["graphics", "text"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

publish = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = ["attributed_text/std"]

[dependencies]
attributed_text = { path = "../attributed_text", default-features = false }

[lints]
workspace = true
