[package]
name = "styled_text_parley"
version = "0.1.0"
description = "Parley backend for styled_text"
keywords = ["text", "style", "parley"]
categories = ["graphics", "text"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

publish = false

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = ["parley/std"]
libm = ["parley/libm"]

[dependencies]
attributed_text.workspace = true
parley.workspace = true
styled_text.workspace = true

[lints]
workspace = true
